--- a/src/app/weather/search-weather/search-weather.component.html
+++ b/src/app/weather/search-weather/search-weather.component.html
@@ -3,26 +3,27 @@
     <div class="col-12">
       <mat-form-field>
         <mat-label>Enter a location</mat-label>
-        <input #box matInput placeholder=" Ex. London" (keyup.enter)="getLocationData(box.value)">
+        <input #box matInput placeholder=" Ex. London" (keyup.enter)="fetchLocationData(box.value)">
       </mat-form-field>
-      <div class="weatherWidget" [@fadeTrigger]="getFadeState()" [style.background]="setWidgetColour(false)">
-        <div class="weatherWidgetRow" *ngIf="weatherData">
-          <i *ngIf="weatherData && weatherData.sys.isDayTime" class="fa fa-sun sun"> </i>
-          <i *ngIf="weatherData && !weatherData.sys.isDayTime" class="fa fa-moon moon"> </i>
-          <i *ngIf="weatherData && containsClouds(weatherData.weather[0].description)" class="fa fa-cloud cloud">
-          </i>
-          <i *ngIf="weatherData && containsSnow(weatherData.weather[0].description)"
-            class="fa fa-snowflake snowflake"></i>
+      <div class="weatherWidget" [@fadeTrigger]="getFadeState()"
+        [style.background]="setWidgetColour(weatherData?.sys.isDayTime)">
+        <div *ngIf="weatherData" class="weatherWidgetRow">
+          <i *ngIf="weatherData?.sys.isDayTime" class="fa fa-sun sun"> </i>
+          <i *ngIf="!weatherData?.sys.isDayTime" class="fa fa-moon moon"> </i>
 
-          <div *ngIf="weatherData">
+          <i *ngIf="containsClouds(weatherData.weather[0].description)" class="fa fa-cloud cloud"
+            [style.color]="setCloudColour(weatherData?.sys.isDayTime)"></i>
+          <i *ngIf="containsSnow(weatherData.weather[0].description)" class="fa fa-snowflake snowflake"></i>
+
+          <div *ngIf="weatherData && timeData">
             <h5> <b> {{weatherData.name}}, {{weatherData.sys.country}}</b></h5>
+            <p> <b> {{timeData.currentTime}} </b></p>
             <p> <b> {{weatherData.weather[0].description}} </b></p>
             <p> Feels like: <b> {{weatherData.main.feels_like}}°C </b></p>
             <p> Humidty: <b> {{weatherData.main.humidity}}%</b> </p>
-            <p> Wind speed: <b> {{weatherData.wind.speed}}mph</b>,
-              <b> {{weatherData.wind.cardinalDirection}}</b> </p>
-            <p>Sunrise at: <b> {{weatherData.sys.sunriseString}}</b>, sunset at:
-              <b> {{weatherData.sys.sunsetString}}</b></p>
+            <p> Wind speed: <b> {{weatherData.wind.speed}}mph</b>,<b> {{weatherData.wind.cardinalDirection}}</b> </p>
+            <p>Sunrise at: <b> {{weatherData.sys.sunriseString}}</b>, sunset at:<b> {{weatherData.sys.sunsetString}}</b>
+            </p>
           </div>
 
         </div>
