--- a/src/app/weather/search-weather/search-weather.component.html
+++ b/src/app/weather/search-weather/search-weather.component.html
@@ -5,19 +5,17 @@
         <mat-label>Enter a location</mat-label>
         <input #box matInput placeholder=" Ex. London" (keyup.enter)="fetchLocationData(box.value)">
       </mat-form-field>
-      <div class="weatherWidget" [@fadeTrigger]="getFadeState()"
-        [style.background]="setWidgetColour(weatherData?.sys.isDayTime)">
-        <div *ngIf="weatherData" class="weatherWidgetRow">
-          <i *ngIf="weatherData?.sys.isDayTime" class="fa fa-sun sun"> </i>
-          <i *ngIf="!weatherData?.sys.isDayTime" class="fa fa-moon moon"> </i>
+      <div class="weatherWidget" [@fadeTrigger]="getFadeState()" [style.background]="setWidgetColour(timeData?.isDay)">
+        <div *ngIf="weatherData && timeData" class="weatherWidgetRow">
+          <i *ngIf="timeData?.isDay == true" class="fa fa-sun sun"> </i>
+          <i *ngIf="timeData?.isDay == false" class="fa fa-moon moon"> </i>
 
-          <i *ngIf="containsClouds(weatherData.weather[0].description)" class="fa fa-cloud cloud"
-            [style.color]="setCloudColour(weatherData?.sys.isDayTime)"></i>
+          <i *ngIf="timeData && containsClouds(weatherData.weather[0].description)" class="fa fa-cloud cloud"></i>
           <i *ngIf="containsSnow(weatherData.weather[0].description)" class="fa fa-snowflake snowflake"></i>
 
           <div *ngIf="weatherData && timeData">
             <h5> <b> {{weatherData.name}}, {{weatherData.sys.country}}</b></h5>
-            <p> <b> {{timeData.currentTime}} </b></p>
+            <p> <b> {{timeData.currentTime || '00,00,00'}} </b></p>
             <p> <b> {{weatherData.weather[0].description}} </b></p>
             <p> Feels like: <b> {{weatherData.main.feels_like}}°C </b></p>
             <p> Humidty: <b> {{weatherData.main.humidity}}%</b> </p>
