--- a/src/app/weather/search-weather/search-weather.component.scss
+++ b/src/app/weather/search-weather/search-weather.component.scss
@@ -7,8 +7,8 @@
 // background: linear-gradient(#15B2D3, #FFD700);
 // /* windy/cloudy */
 
-$primaryBtn: red;
-$widgetColour: linear-gradient(#080033, #323ec0);
+// $primaryBtn: red;
+// $widgetColour: linear-gradient(#080033, #323ec0);
 
 .weatherWidget {
   display: block;
