Error handling, time for Node!

--- a/src/app/weather/search-weather/search-weather.component.html
+++ b/src/app/weather/search-weather/search-weather.component.html
@@ -23,9 +23,13 @@
             <p>Sunrise at: <b> {{weatherData.sys.sunriseString}}</b>, sunset at:<b> {{weatherData.sys.sunsetString}}</b>
             </p>
           </div>
-
         </div>
       </div>
+
+      <div>
+        <h5> {{error}}</h5>
+      </div>
+
     </div>
   </div>
 </div>
