--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
@@ -13,9 +13,9 @@ body {
 .version-info {
   font-size: 8pt;
   float: right;
+  padding: 40px;
   margin: 8px;
 }
-
 
 /**  Copyright 2019 Google LLC. All Rights Reserved.
     Use of this source code is governed by an MIT-style license that
