Connected and fetching data from Node REST API

--- a/frontend/src/app/weather/search-weather/search-weather.component.scss
+++ b/frontend/src/app/weather/search-weather/search-weather.component.scss
@@ -13,6 +13,7 @@
 .weatherWidget {
   display: block;
   border-radius: 10px;
+  box-shadow: 3px 3px 10px lightgrey;
   width: 100%;
   height: 100%;
   color: white;
