--- a/frontend/src/app/weather/search-weather/search-weather.component.css
+++ b/frontend/src/app/weather/search-weather/search-weather.component.css
@@ -140,6 +140,8 @@
 .weatherWidget {
   display: block;
   border-radius: 10px;
+  -webkit-box-shadow: 3px 3px 10px lightgrey;
+          box-shadow: 3px 3px 10px lightgrey;
   width: 100%;
   height: 100%;
   color: white;
