Error handling, node changes, looking good!

--- a/frontend/src/app/weather/search-weather/search-weather.component.html
+++ b/frontend/src/app/weather/search-weather/search-weather.component.html
@@ -26,8 +26,9 @@
         </div>
       </div>
 
-      <div>
-        <h5>{{error}}</h5>
+      <div *ngIf="error">
+        <p> Invalid location. Please try again</p>
+        <!-- <p>{{error}}</p> -->
       </div>
 
     </div>
