--- a/frontend/src/app/weather/search-weather/search-weather.component.html
+++ b/frontend/src/app/weather/search-weather/search-weather.component.html
@@ -15,7 +15,7 @@
 
           <div *ngIf="weatherData && timeData">
             <h5> <b> {{weatherData.name}}, {{weatherData.sys.country}}</b></h5>
-            <p> <b> {{timeData.currentTime || '00,00,00'}} </b></p>
+            <p> <b> {{timeData.dateString}}, {{timeData.currentTime || '00,00,00'}} </b></p>
             <p> <b> {{weatherData.weather[0].description}} </b></p>
             <p> Feels like: <b> {{weatherData.main.feels_like}}°C </b></p>
             <p> Humidty: <b> {{weatherData.main.humidity}}%</b> </p>
