Google maps integration, some small changes

--- a/frontend/src/app/weather/search-weather/search-weather.component.css
+++ b/frontend/src/app/weather/search-weather/search-weather.component.css
@@ -163,4 +163,8 @@ mat-form-field {
 input {
   color: blue;
 }
+
+agm-map {
+  height: 400px;
+}
 /*# sourceMappingURL=search-weather.component.css.map */
