--- a/frontend/src/app/weather/search-weather/search-weather.component.html
+++ b/frontend/src/app/weather/search-weather/search-weather.component.html
@@ -1,3 +1,7 @@
+<agm-map [latitude]="weatherData?.coord?.lat" [longitude]="weatherData?.coord?.lon">
+  <agm-marker [latitude]="weatherData?.coord?.lat" [longitude]="weatherData?.coord?.lon"></agm-marker>
+</agm-map>
+
 <div class="container">
   <div class="row">
     <div class="col-12">
