Storing, displaying locations, NodeJS FUN

--- a/frontend/src/app/weather/weather.component.html
+++ b/frontend/src/app/weather/weather.component.html
@@ -14,3 +14,9 @@
     <p> Invalid location. Please try again</p>
     <p>{{errorMessage}}</p>
 </div>
+
+<ul>
+    <li *ngFor="let location of locationFreqData">
+        {{ location.locationName }}, {{ location.date}}
+    </li>
+</ul>
