Most frequently searched table + sorting, filtering. + Update/Save searches

--- a/frontend/src/app/weather/weather.component.html
+++ b/frontend/src/app/weather/weather.component.html
@@ -1,22 +1,20 @@
+<mat-toolbar color="primary">
+    Location info finder
+</mat-toolbar>
 <mat-form-field>
     <mat-label>Enter a location</mat-label>
-    <input #box matInput placeholder=" Ex. London" (keyup.enter)="fetchLocationData(box.value)">
+    <input #box matInput placeholder="Ex. Toronto" (keyup.enter)="fetchLocationData(box.value)">
 </mat-form-field>
 
-<div [@fadeTrigger]="getFadeState()">
-    <app-weather-data [weatherData]="weatherData" [timeData]="timeData">
-    </app-weather-data>
-    <hr>
-    <app-weather-map [weatherData]="weatherData">
-    </app-weather-map>
-</div>
 <div *ngIf="errorMessage">
     <p> Invalid location. Please try again</p>
     <p>{{errorMessage}}</p>
 </div>
 
-<ul>
-    <li *ngFor="let location of locationFreqData">
-        {{ location.locationName }}, {{ location.date}}
-    </li>
-</ul>
+<div [@fadeTrigger]="getFadeState()">
+    <app-weather-data [weatherData]="weatherData" [timeData]="timeData"></app-weather-data>
+    <hr>
+    <app-weather-map [weatherData]="weatherData"></app-weather-map>
+    <hr>
+    <app-weather-table [locationFreqData]="locationFreqData"> </app-weather-table>
+</div>
