--- a/frontend/src/app/weather/weather-map/weather-map.component.scss
+++ b/frontend/src/app/weather/weather-map/weather-map.component.scss
@@ -1,4 +1,7 @@
 agm-map {
     height: 400px;
     width: 100%;
+    display: block;
+    border-radius: 10px;
+    mask-image: linear-gradient(white, black);
 }
