--- a/frontend/src/app/weather/weather-table/weather-table/weather-table.component.html
+++ b/frontend/src/app/weather/weather-table/weather-table/weather-table.component.html
@@ -8,17 +8,22 @@
     <ng-container matColumnDef="locationName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Name. </th>
         <td mat-cell *matCellDef="let element"> {{element.locationName | titlecase}} </td>
-        <td mat-footer-cell *matFooterCellDef> {{dataSource.data.length}} </td>
+        <td mat-footer-cell *matFooterCellDef> <b>Locations: {{dataSource.data.length}}</b> </td>
     </ng-container>
 
     <ng-container matColumnDef="count">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Count. </th>
         <td mat-cell *matCellDef="let element"> {{element.count}} </td>
-        <td mat-footer-cell *matFooterCellDef> {{getTotalCount()}} </td>
+        <td mat-footer-cell *matFooterCellDef> <b>Total: {{getTotalCount()}}</b></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
-
 </table>
+<mat-paginator #paginator [length]="dataSource?.data.length" [pageSizeOptions]="[10]">
+</mat-paginator>
+
+<!-- <mat-paginator #paginator [length]="dataSource?.data.length" [pageIndex]="0" [pageSize]="10"
+    [pageSizeOptions]="[5, 10, 20]">
+</mat-paginator> -->
