--- a/frontend/src/app/weather/weather-table/weather-table/weather-table.component.html
+++ b/frontend/src/app/weather/weather-table/weather-table/weather-table.component.html
@@ -21,9 +21,5 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
 </table>
-<mat-paginator #paginator [length]="dataSource?.data.length" [pageSizeOptions]="[10, 20]">
-</mat-paginator>
 
-<!-- <mat-paginator #paginator [length]="dataSource?.data.length" [pageIndex]="0" [pageSize]="10"
-    [pageSizeOptions]="[5, 10, 20]">
-</mat-paginator> -->
+<mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
